# Concurrencia

./: .gitignore
apuntes_roberto/ejemploThreads/: Makefile  threads.c
apuntes_roberto/mpi/: ejemplo  ejemplo1.cpp
apuntes_sergio/CreadorMatrices/: main.c  makefile
apuntes_sergio/MPI/: copy_files.sh  ejemplo  ejemplo1.cpp  ejemplo2SendRecieve  ejemplo2SendRecieve.cpp  ejemplo3DosExtendido.cpp  hostFile.txt
apuntes_sergio/cuda/: kernelConcurrencia.cu
apuntes_sergio/ejemplo threads/: ejemplo  ejemploThreads  ejemploThreads.c  main.c  makefile  threads.c  threads.h
apuntes_sergio/multiplicarMatricesSecuencial/: main.c  makefile
ejemploThreads/: ejemplothreads.c  main.c
practicas/p1_s1/generadorMatrices/: Makefile  generadorMatrices  matriz.cpp
practicas/p1_s1/multiplicadorMatrices/: main.cpp
practicas/p1_s1/resultados/: resultados.ods
practicas/p1_s2_threads/: execution_script.sh
practicas/p1_s2_threads/P1_s2_loco/: Makefile  main.cpp  matriz.cpp  matriz.h
practicas/p1_s2_threads/p1_s2_balan_carga/: main.cpp  matriz.cpp  matriz.h  multiplicadorMatrices  resultadosCincomil.txt  resultadosDiezmil.txt  resultadosDosmil.txt  tresaleatoria
practicas/p1_s2_threads/p1_s2_div_estatica/: main.cpp  matriz.cpp  (+6 more)
practicas/p1_s4_mpi-cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  clase.txt  cmake_install.cmake  main.cpp  matriz.cpp  matriz.h  slave.cpp  slave.h
practicas/p1_s4_mpi/p1_s4_cuda/src/: CMakeLists.txt  MPI_execution_script.sh  Makefile  hostfile.txt  main  main.cpp  main.cu  matriz.cpp  matriz.h  mulMatrixMPI  practica2Cuda.cu  practica2Cuda.h
(+70 files in other folders)
